HTML and CSS: Fix spacing and linking

--- a/frontend/style.css
+++ b/frontend/style.css
@@ -249,6 +249,7 @@ footer .logo{
     border-radius: 4px;
     box-shadow: 0px 0px 10px #00000030;
     background-color: white;
+    gap: 0;
 }
 
 .card img{
@@ -261,9 +262,14 @@ footer .logo{
     border-radius: 4px 4px 0 0;
 }
 
+.card h1{
+    height: 54px;
+}
+
 .card h1, .card .card-footer{
     padding: 0 var(--padding-sm);
 }
+
 
 .loading img{
     background-color: gray;
